resilient/tests/it/snapshots/it__diagnostics_snapshots__runtime_unknown_identifier@runtime_unknown_identifier.snap
---
source: tests/diagnostics_snapshots.rs
description: "fn main(int _d) {\n    return frobnicate(1);\n}\nmain(0);\n"
expression: output
---
Error: <tmp>.rs:4:5: Runtime error: Identifier not found: frobnicate
Runtime error: Identifier not found: frobnicate
   main(0);
       ^
